# routes/index.js
@@ -28,7 +28,7 @@ router.get("/logout", (req, res) => {
 
 router.use("/books", require("./books"));
 router.use("/authors", require("./authors"));
-router.use("/store", require("./store"));
+router.use("/stores", require("./store"));
 router.use("/users", require("./users"));
 router.use("/swagger", require("./swagger"));
 
